# smkdev

./: CMakeLists.txt
antrasdarbas_antrasvariantas/: CMakeLists.txt  failuTvarkytuvas.h  main.cpp  sarasas.h  studentas.h  studentuGrupesValdymas.h
database/: create.sql  docker-compose.yml  joins.sql  seed.sql  selects_funcs.sql  selects_scalar.sql  updates.sql
egzas_2variantas/: CMakeLists.txt  main.cpp
pirmasdarbas_antrasvariantas/: CMakeLists.txt  dream_team.txt  main.cpp  sportsman.cpp  sportsman.h  team.cpp  team.h  teamFileLoader.cpp  teamFileLoader.h
pirmasdarbas_pirmasvariantas/: CMakeLists.txt  adresu_knyga.txt  adresuknygute.h  asmuo.h  main.cpp  uzduotis.txt
